-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.16.0, Lustre 2.17.0
-
None
-
3
-
9223372036854775807
patch https://review.whamcloud.com/c/fs/lustre-release/+/55505 introduced a sleeping before panic on lbug, this is actually a bad idea:
it pollutes the logs with useless data (both lustre and dmesg) and makes sure all sorts of tight races disappear from threads in the crashdump.
This msleep needs to be removed.
- is related to
-
LU-17793 warning: objtool: __cfs_fail_check_set() falls through to next function __cfs_fail_timeout_set()
-
- Resolved
-