LU-18445 libcfs: Remove msleep before panic for lbug

If panic on lbug is set, do not sleep before calling
the panic() as it has very undesirable side effects.
Logs are getting rotated, racing threads continue moving
and get harder to understand what they were doing and
so on.

Test-Parameters: trivial
Fixes: 9f44a48b365 ("LU-17793 libcfs: fix objtool warning in lbug_with_loc()")
Change-Id: Idd49bda78c6441a11d3ea18cb053fd9755552604
Signed-off-by: Oleg Drokin <green@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/57010
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Timothy Day <timday@amazon.com>